extract Tracked, start read only context work